y.output
Terminals unused in grammar

   var_char
   var_string
   lalg_char
   lalg_string


State 5 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 19 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 47 conflicts: 7 reduce/reduce
State 53 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce
State 65 conflicts: 7 reduce/reduce
State 74 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 84 conflicts: 17 reduce/reduce
State 86 conflicts: 1 shift/reduce
State 87 conflicts: 1 shift/reduce
State 89 conflicts: 1 reduce/reduce
State 93 conflicts: 1 shift/reduce
State 114 conflicts: 2 shift/reduce
State 117 conflicts: 1 reduce/reduce
State 122 conflicts: 1 reduce/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 142 conflicts: 1 reduce/reduce
State 144 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: lalg_program var_identifier lalg_semicolon corpo lalg_period

    2 corpo: dc lalg_begin comandos lalg_end

    3 dc: dc_c dc_v dc_p dc_f

    4 dc_c: lalg_const var_identifier lalg_equal var_numero lalg_semicolon dc_c
    5     | %empty
    6     | error

    7 dc_v: lalg_var variaveis lalg_colon tipo_var lalg_semicolon dc_v
    8     | %empty
    9     | error

   10 tipo_var: lalg_real
   11         | lalg_integer
   12         | error

   13 variaveis: var_identifier mais_var
   14          | error

   15 mais_var: lalg_comma variaveis
   16         | %empty
   17         | error

   18 dc_p: lalg_procedure var_identifier parametros lalg_semicolon corpo_p dc_p
   19     | %empty
   20     | error

   21 dc_f: lalg_function var_identifier parametros lalg_colon tipo_var corpo_p dc_f
   22     | %empty
   23     | error

   24 parametros: lalg_leftp lista_par lalg_rightp
   25           | %empty
   26           | error

   27 lista_par: variaveis lalg_colon tipo_var mais_par
   28          | error

   29 mais_par: lalg_semicolon lista_par
   30         | %empty
   31         | error

   32 corpo_p: dc_loc lalg_begin comandos lalg_end lalg_semicolon
   33        | error

   34 dc_loc: dc_v

   35 lista_arg: lalg_leftp argumentos lalg_rightp
   36          | %empty
   37          | error

   38 argumentos: var_identifier mais_ident
   39           | error

   40 mais_ident: lalg_semicolon argumentos
   41           | %empty
   42           | error

   43 pfalsa: lalg_else cmd
   44       | %empty
   45       | error

   46 comandos: cmd lalg_semicolon comandos
   47         | %empty
   48         | error

   49 cmd: lalg_read lalg_leftp variaveis lalg_rightp
   50    | lalg_write lalg_leftp variaveis lalg_rightp
   51    | lalg_while lalg_leftp condicao lalg_rightp lalg_do cmd
   52    | lalg_for var_identifier lalg_assignment expressao lalg_to expressao lalg_do cmd
   53    | lalg_if condicao lalg_then cmd pfalsa
   54    | var_identifier lalg_assignment expressao
   55    | var_identifier lista_arg
   56    | lalg_begin comandos lalg_end
   57    | error

   58 condicao: expressao relacao expressao
   59         | error

   60 relacao: lalg_equal
   61        | lalg_n_equal
   62        | lalg_g_than
   63        | lalg_l_than
   64        | lalg_ge_than
   65        | lalg_le_than
   66        | error

   67 expressao: termo outros_termos
   68          | error

   69 op_un: lalg_add
   70      | lalg_sub
   71      | %empty
   72      | error

   73 outros_termos: op_ad termo outros_termos
   74              | %empty
   75              | error

   76 op_ad: lalg_add
   77      | lalg_sub
   78      | error

   79 termo: op_un fator mais_fatores
   80      | error

   81 mais_fatores: op_mul fator mais_fatores
   82             | %empty
   83             | error

   84 op_mul: lalg_mul
   85       | lalg_div
   86       | error

   87 fator: var_identifier
   88      | var_numero
   89      | lalg_leftp expressao lalg_rightp
   90      | error

   91 var_numero: var_integer
   92           | var_real
   93           | error


Terminals, with rules where they appear

$end (0) 0
error (256) 6 9 12 14 17 20 23 26 28 31 33 37 39 42 45 48 57 59 66
    68 72 75 78 80 83 86 90 93
var_identifier (258) 1 4 13 18 21 38 52 54 55 87
var_real (259) 92
var_integer (260) 91
var_char (261)
var_string (262)
lalg_integer (263) 11
lalg_real (264) 10
lalg_char (265)
lalg_string (266)
lalg_add (267) 69 76
lalg_sub (268) 70 77
lalg_mul (269) 84
lalg_div (270) 85
lalg_equal (271) 4 60
lalg_n_equal (272) 61
lalg_g_than (273) 62
lalg_l_than (274) 63
lalg_ge_than (275) 64
lalg_le_than (276) 65
lalg_assignment (277) 52 54
lalg_leftp (278) 24 35 49 50 51 89
lalg_rightp (279) 24 35 49 50 51 89
lalg_colon (280) 7 21 27
lalg_semicolon (281) 1 4 7 18 29 32 40 46
lalg_period (282) 1
lalg_comma (283) 15
lalg_program (284) 1
lalg_procedure (285) 18
lalg_function (286) 21
lalg_begin (287) 2 32 56
lalg_end (288) 2 32 56
lalg_const (289) 4
lalg_var (290) 7
lalg_read (291) 49
lalg_write (292) 50
lalg_while (293) 51
lalg_do (294) 51 52
lalg_for (295) 52
lalg_to (296) 52
lalg_if (297) 53
lalg_then (298) 53
lalg_else (299) 43


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
programa (46)
    on left: 1, on right: 0
corpo (47)
    on left: 2, on right: 1
dc (48)
    on left: 3, on right: 2
dc_c (49)
    on left: 4 5 6, on right: 3 4
dc_v (50)
    on left: 7 8 9, on right: 3 7 34
tipo_var (51)
    on left: 10 11 12, on right: 7 21 27
variaveis (52)
    on left: 13 14, on right: 7 15 27 49 50
mais_var (53)
    on left: 15 16 17, on right: 13
dc_p (54)
    on left: 18 19 20, on right: 3 18
dc_f (55)
    on left: 21 22 23, on right: 3 21
parametros (56)
    on left: 24 25 26, on right: 18 21
lista_par (57)
    on left: 27 28, on right: 24 29
mais_par (58)
    on left: 29 30 31, on right: 27
corpo_p (59)
    on left: 32 33, on right: 18 21
dc_loc (60)
    on left: 34, on right: 32
lista_arg (61)
    on left: 35 36 37, on right: 55
argumentos (62)
    on left: 38 39, on right: 35 40
mais_ident (63)
    on left: 40 41 42, on right: 38
pfalsa (64)
    on left: 43 44 45, on right: 53
comandos (65)
    on left: 46 47 48, on right: 2 32 46 56
cmd (66)
    on left: 49 50 51 52 53 54 55 56 57, on right: 43 46 51 52 53
condicao (67)
    on left: 58 59, on right: 51 53
relacao (68)
    on left: 60 61 62 63 64 65 66, on right: 58
expressao (69)
    on left: 67 68, on right: 52 54 58 89
op_un (70)
    on left: 69 70 71 72, on right: 79
outros_termos (71)
    on left: 73 74 75, on right: 67 73
op_ad (72)
    on left: 76 77 78, on right: 73
termo (73)
    on left: 79 80, on right: 67 73
mais_fatores (74)
    on left: 81 82 83, on right: 79 81
op_mul (75)
    on left: 84 85 86, on right: 81
fator (76)
    on left: 87 88 89 90, on right: 79 81
var_numero (77)
    on left: 91 92 93, on right: 4 88


State 0

    0 $accept: . programa $end

    lalg_program  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: lalg_program . var_identifier lalg_semicolon corpo lalg_period

    var_identifier  shift, and go to state 3


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    1 programa: lalg_program var_identifier . lalg_semicolon corpo lalg_period

    lalg_semicolon  shift, and go to state 5


State 4

    0 $accept: programa $end .

    $default  accept


State 5

    1 programa: lalg_program var_identifier lalg_semicolon . corpo lalg_period

    error       shift, and go to state 6
    lalg_const  shift, and go to state 7

    error           [reduce using rule 5 (dc_c)]
    lalg_procedure  reduce using rule 5 (dc_c)
    lalg_function   reduce using rule 5 (dc_c)
    lalg_begin      reduce using rule 5 (dc_c)
    lalg_var        reduce using rule 5 (dc_c)

    corpo  go to state 8
    dc     go to state 9
    dc_c   go to state 10


State 6

    6 dc_c: error .

    $default  reduce using rule 6 (dc_c)


State 7

    4 dc_c: lalg_const . var_identifier lalg_equal var_numero lalg_semicolon dc_c

    var_identifier  shift, and go to state 11


State 8

    1 programa: lalg_program var_identifier lalg_semicolon corpo . lalg_period

    lalg_period  shift, and go to state 12


State 9

    2 corpo: dc . lalg_begin comandos lalg_end

    lalg_begin  shift, and go to state 13


State 10

    3 dc: dc_c . dc_v dc_p dc_f

    error     shift, and go to state 14
    lalg_var  shift, and go to state 15

    error           [reduce using rule 8 (dc_v)]
    lalg_procedure  reduce using rule 8 (dc_v)
    lalg_function   reduce using rule 8 (dc_v)
    lalg_begin      reduce using rule 8 (dc_v)

    dc_v  go to state 16


State 11

    4 dc_c: lalg_const var_identifier . lalg_equal var_numero lalg_semicolon dc_c

    lalg_equal  shift, and go to state 17


State 12

    1 programa: lalg_program var_identifier lalg_semicolon corpo lalg_period .

    $default  reduce using rule 1 (programa)


State 13

    2 corpo: dc lalg_begin . comandos lalg_end

    error           shift, and go to state 18
    var_identifier  shift, and go to state 19
    lalg_begin      shift, and go to state 20
    lalg_read       shift, and go to state 21
    lalg_write      shift, and go to state 22
    lalg_while      shift, and go to state 23
    lalg_for        shift, and go to state 24
    lalg_if         shift, and go to state 25

    lalg_end  reduce using rule 47 (comandos)

    comandos  go to state 26
    cmd       go to state 27


State 14

    9 dc_v: error .

    $default  reduce using rule 9 (dc_v)


State 15

    7 dc_v: lalg_var . variaveis lalg_colon tipo_var lalg_semicolon dc_v

    error           shift, and go to state 28
    var_identifier  shift, and go to state 29

    variaveis  go to state 30


State 16

    3 dc: dc_c dc_v . dc_p dc_f

    error           shift, and go to state 31
    lalg_procedure  shift, and go to state 32

    error          [reduce using rule 19 (dc_p)]
    lalg_function  reduce using rule 19 (dc_p)
    lalg_begin     reduce using rule 19 (dc_p)

    dc_p  go to state 33


State 17

    4 dc_c: lalg_const var_identifier lalg_equal . var_numero lalg_semicolon dc_c

    error        shift, and go to state 34
    var_real     shift, and go to state 35
    var_integer  shift, and go to state 36

    var_numero  go to state 37


State 18

   48 comandos: error .
   57 cmd: error .

    lalg_semicolon  reduce using rule 57 (cmd)
    $default        reduce using rule 48 (comandos)


State 19

   54 cmd: var_identifier . lalg_assignment expressao
   55    | var_identifier . lista_arg

    error            shift, and go to state 38
    lalg_assignment  shift, and go to state 39
    lalg_leftp       shift, and go to state 40

    error           [reduce using rule 36 (lista_arg)]
    lalg_semicolon  reduce using rule 36 (lista_arg)
    lalg_else       reduce using rule 36 (lista_arg)

    lista_arg  go to state 41


State 20

   56 cmd: lalg_begin . comandos lalg_end

    error           shift, and go to state 18
    var_identifier  shift, and go to state 19
    lalg_begin      shift, and go to state 20
    lalg_read       shift, and go to state 21
    lalg_write      shift, and go to state 22
    lalg_while      shift, and go to state 23
    lalg_for        shift, and go to state 24
    lalg_if         shift, and go to state 25

    lalg_end  reduce using rule 47 (comandos)

    comandos  go to state 42
    cmd       go to state 27


State 21

   49 cmd: lalg_read . lalg_leftp variaveis lalg_rightp

    lalg_leftp  shift, and go to state 43


State 22

   50 cmd: lalg_write . lalg_leftp variaveis lalg_rightp

    lalg_leftp  shift, and go to state 44


State 23

   51 cmd: lalg_while . lalg_leftp condicao lalg_rightp lalg_do cmd

    lalg_leftp  shift, and go to state 45


State 24

   52 cmd: lalg_for . var_identifier lalg_assignment expressao lalg_to expressao lalg_do cmd

    var_identifier  shift, and go to state 46


State 25

   53 cmd: lalg_if . condicao lalg_then cmd pfalsa

    error     shift, and go to state 47
    lalg_add  shift, and go to state 48
    lalg_sub  shift, and go to state 49

    error           [reduce using rule 71 (op_un)]
    var_identifier  reduce using rule 71 (op_un)
    var_real        reduce using rule 71 (op_un)
    var_integer     reduce using rule 71 (op_un)
    lalg_leftp      reduce using rule 71 (op_un)

    condicao   go to state 50
    expressao  go to state 51
    op_un      go to state 52
    termo      go to state 53


State 26

    2 corpo: dc lalg_begin comandos . lalg_end

    lalg_end  shift, and go to state 54


State 27

   46 comandos: cmd . lalg_semicolon comandos

    lalg_semicolon  shift, and go to state 55


State 28

   14 variaveis: error .

    $default  reduce using rule 14 (variaveis)


State 29

   13 variaveis: var_identifier . mais_var

    error       shift, and go to state 56
    lalg_comma  shift, and go to state 57

    lalg_rightp  reduce using rule 16 (mais_var)
    lalg_colon   reduce using rule 16 (mais_var)

    mais_var  go to state 58


State 30

    7 dc_v: lalg_var variaveis . lalg_colon tipo_var lalg_semicolon dc_v

    lalg_colon  shift, and go to state 59


State 31

   20 dc_p: error .

    $default  reduce using rule 20 (dc_p)


State 32

   18 dc_p: lalg_procedure . var_identifier parametros lalg_semicolon corpo_p dc_p

    var_identifier  shift, and go to state 60


State 33

    3 dc: dc_c dc_v dc_p . dc_f

    error          shift, and go to state 61
    lalg_function  shift, and go to state 62

    lalg_begin  reduce using rule 22 (dc_f)

    dc_f  go to state 63


State 34

   93 var_numero: error .

    $default  reduce using rule 93 (var_numero)


State 35

   92 var_numero: var_real .

    $default  reduce using rule 92 (var_numero)


State 36

   91 var_numero: var_integer .

    $default  reduce using rule 91 (var_numero)


State 37

    4 dc_c: lalg_const var_identifier lalg_equal var_numero . lalg_semicolon dc_c

    lalg_semicolon  shift, and go to state 64


State 38

   37 lista_arg: error .

    $default  reduce using rule 37 (lista_arg)


State 39

   54 cmd: var_identifier lalg_assignment . expressao

    error     shift, and go to state 65
    lalg_add  shift, and go to state 48
    lalg_sub  shift, and go to state 49

    error           [reduce using rule 71 (op_un)]
    var_identifier  reduce using rule 71 (op_un)
    var_real        reduce using rule 71 (op_un)
    var_integer     reduce using rule 71 (op_un)
    lalg_leftp      reduce using rule 71 (op_un)

    expressao  go to state 66
    op_un      go to state 52
    termo      go to state 53


State 40

   35 lista_arg: lalg_leftp . argumentos lalg_rightp

    error           shift, and go to state 67
    var_identifier  shift, and go to state 68

    argumentos  go to state 69


State 41

   55 cmd: var_identifier lista_arg .

    $default  reduce using rule 55 (cmd)


State 42

   56 cmd: lalg_begin comandos . lalg_end

    lalg_end  shift, and go to state 70


State 43

   49 cmd: lalg_read lalg_leftp . variaveis lalg_rightp

    error           shift, and go to state 28
    var_identifier  shift, and go to state 29

    variaveis  go to state 71


State 44

   50 cmd: lalg_write lalg_leftp . variaveis lalg_rightp

    error           shift, and go to state 28
    var_identifier  shift, and go to state 29

    variaveis  go to state 72


State 45

   51 cmd: lalg_while lalg_leftp . condicao lalg_rightp lalg_do cmd

    error     shift, and go to state 47
    lalg_add  shift, and go to state 48
    lalg_sub  shift, and go to state 49

    error           [reduce using rule 71 (op_un)]
    var_identifier  reduce using rule 71 (op_un)
    var_real        reduce using rule 71 (op_un)
    var_integer     reduce using rule 71 (op_un)
    lalg_leftp      reduce using rule 71 (op_un)

    condicao   go to state 73
    expressao  go to state 51
    op_un      go to state 52
    termo      go to state 53


State 46

   52 cmd: lalg_for var_identifier . lalg_assignment expressao lalg_to expressao lalg_do cmd

    lalg_assignment  shift, and go to state 74


State 47

   59 condicao: error .
   68 expressao: error .
   72 op_un: error .
   80 termo: error .

    error           reduce using rule 68 (expressao)
    error           [reduce using rule 72 (op_un)]
    error           [reduce using rule 80 (termo)]
    var_identifier  reduce using rule 72 (op_un)
    var_real        reduce using rule 72 (op_un)
    var_integer     reduce using rule 72 (op_un)
    lalg_add        reduce using rule 80 (termo)
    lalg_sub        reduce using rule 80 (termo)
    lalg_equal      reduce using rule 68 (expressao)
    lalg_equal      [reduce using rule 80 (termo)]
    lalg_n_equal    reduce using rule 68 (expressao)
    lalg_n_equal    [reduce using rule 80 (termo)]
    lalg_g_than     reduce using rule 68 (expressao)
    lalg_g_than     [reduce using rule 80 (termo)]
    lalg_l_than     reduce using rule 68 (expressao)
    lalg_l_than     [reduce using rule 80 (termo)]
    lalg_ge_than    reduce using rule 68 (expressao)
    lalg_ge_than    [reduce using rule 80 (termo)]
    lalg_le_than    reduce using rule 68 (expressao)
    lalg_le_than    [reduce using rule 80 (termo)]
    lalg_leftp      reduce using rule 72 (op_un)
    lalg_rightp     reduce using rule 59 (condicao)
    lalg_then       reduce using rule 59 (condicao)
    $default        reduce using rule 68 (expressao)


State 48

   69 op_un: lalg_add .

    $default  reduce using rule 69 (op_un)


State 49

   70 op_un: lalg_sub .

    $default  reduce using rule 70 (op_un)


State 50

   53 cmd: lalg_if condicao . lalg_then cmd pfalsa

    lalg_then  shift, and go to state 75


State 51

   58 condicao: expressao . relacao expressao

    error         shift, and go to state 76
    lalg_equal    shift, and go to state 77
    lalg_n_equal  shift, and go to state 78
    lalg_g_than   shift, and go to state 79
    lalg_l_than   shift, and go to state 80
    lalg_ge_than  shift, and go to state 81
    lalg_le_than  shift, and go to state 82

    relacao  go to state 83


State 52

   79 termo: op_un . fator mais_fatores

    error           shift, and go to state 84
    var_identifier  shift, and go to state 85
    var_real        shift, and go to state 35
    var_integer     shift, and go to state 36
    lalg_leftp      shift, and go to state 86

    fator       go to state 87
    var_numero  go to state 88


State 53

   67 expressao: termo . outros_termos

    error     shift, and go to state 89
    lalg_add  shift, and go to state 90
    lalg_sub  shift, and go to state 91

    error           [reduce using rule 74 (outros_termos)]
    lalg_equal      reduce using rule 74 (outros_termos)
    lalg_n_equal    reduce using rule 74 (outros_termos)
    lalg_g_than     reduce using rule 74 (outros_termos)
    lalg_l_than     reduce using rule 74 (outros_termos)
    lalg_ge_than    reduce using rule 74 (outros_termos)
    lalg_le_than    reduce using rule 74 (outros_termos)
    lalg_rightp     reduce using rule 74 (outros_termos)
    lalg_semicolon  reduce using rule 74 (outros_termos)
    lalg_do         reduce using rule 74 (outros_termos)
    lalg_to         reduce using rule 74 (outros_termos)
    lalg_then       reduce using rule 74 (outros_termos)
    lalg_else       reduce using rule 74 (outros_termos)

    outros_termos  go to state 92
    op_ad          go to state 93


State 54

    2 corpo: dc lalg_begin comandos lalg_end .

    $default  reduce using rule 2 (corpo)


State 55

   46 comandos: cmd lalg_semicolon . comandos

    error           shift, and go to state 18
    var_identifier  shift, and go to state 19
    lalg_begin      shift, and go to state 20
    lalg_read       shift, and go to state 21
    lalg_write      shift, and go to state 22
    lalg_while      shift, and go to state 23
    lalg_for        shift, and go to state 24
    lalg_if         shift, and go to state 25

    lalg_end  reduce using rule 47 (comandos)

    comandos  go to state 94
    cmd       go to state 27


State 56

   17 mais_var: error .

    $default  reduce using rule 17 (mais_var)


State 57

   15 mais_var: lalg_comma . variaveis

    error           shift, and go to state 28
    var_identifier  shift, and go to state 29

    variaveis  go to state 95


State 58

   13 variaveis: var_identifier mais_var .

    $default  reduce using rule 13 (variaveis)


State 59

    7 dc_v: lalg_var variaveis lalg_colon . tipo_var lalg_semicolon dc_v

    error         shift, and go to state 96
    lalg_integer  shift, and go to state 97
    lalg_real     shift, and go to state 98

    tipo_var  go to state 99


State 60

   18 dc_p: lalg_procedure var_identifier . parametros lalg_semicolon corpo_p dc_p

    error       shift, and go to state 100
    lalg_leftp  shift, and go to state 101

    lalg_semicolon  reduce using rule 25 (parametros)

    parametros  go to state 102


State 61

   23 dc_f: error .

    $default  reduce using rule 23 (dc_f)


State 62

   21 dc_f: lalg_function . var_identifier parametros lalg_colon tipo_var corpo_p dc_f

    var_identifier  shift, and go to state 103


State 63

    3 dc: dc_c dc_v dc_p dc_f .

    $default  reduce using rule 3 (dc)


State 64

    4 dc_c: lalg_const var_identifier lalg_equal var_numero lalg_semicolon . dc_c

    error       shift, and go to state 6
    lalg_const  shift, and go to state 7

    error           [reduce using rule 5 (dc_c)]
    lalg_procedure  reduce using rule 5 (dc_c)
    lalg_function   reduce using rule 5 (dc_c)
    lalg_begin      reduce using rule 5 (dc_c)
    lalg_var        reduce using rule 5 (dc_c)

    dc_c  go to state 104


State 65

   68 expressao: error .
   72 op_un: error .
   80 termo: error .

    error           reduce using rule 68 (expressao)
    error           [reduce using rule 72 (op_un)]
    error           [reduce using rule 80 (termo)]
    var_identifier  reduce using rule 72 (op_un)
    var_real        reduce using rule 72 (op_un)
    var_integer     reduce using rule 72 (op_un)
    lalg_add        reduce using rule 80 (termo)
    lalg_sub        reduce using rule 80 (termo)
    lalg_leftp      reduce using rule 72 (op_un)
    lalg_rightp     reduce using rule 68 (expressao)
    lalg_rightp     [reduce using rule 80 (termo)]
    lalg_semicolon  reduce using rule 68 (expressao)
    lalg_semicolon  [reduce using rule 80 (termo)]
    lalg_do         reduce using rule 68 (expressao)
    lalg_do         [reduce using rule 80 (termo)]
    lalg_to         reduce using rule 68 (expressao)
    lalg_to         [reduce using rule 80 (termo)]
    lalg_then       reduce using rule 68 (expressao)
    lalg_then       [reduce using rule 80 (termo)]
    lalg_else       reduce using rule 68 (expressao)
    lalg_else       [reduce using rule 80 (termo)]
    $default        reduce using rule 68 (expressao)


State 66

   54 cmd: var_identifier lalg_assignment expressao .

    $default  reduce using rule 54 (cmd)


State 67

   39 argumentos: error .

    $default  reduce using rule 39 (argumentos)


State 68

   38 argumentos: var_identifier . mais_ident

    error           shift, and go to state 105
    lalg_semicolon  shift, and go to state 106

    lalg_rightp  reduce using rule 41 (mais_ident)

    mais_ident  go to state 107


State 69

   35 lista_arg: lalg_leftp argumentos . lalg_rightp

    lalg_rightp  shift, and go to state 108


State 70

   56 cmd: lalg_begin comandos lalg_end .

    $default  reduce using rule 56 (cmd)


State 71

   49 cmd: lalg_read lalg_leftp variaveis . lalg_rightp

    lalg_rightp  shift, and go to state 109


State 72

   50 cmd: lalg_write lalg_leftp variaveis . lalg_rightp

    lalg_rightp  shift, and go to state 110


State 73

   51 cmd: lalg_while lalg_leftp condicao . lalg_rightp lalg_do cmd

    lalg_rightp  shift, and go to state 111


State 74

   52 cmd: lalg_for var_identifier lalg_assignment . expressao lalg_to expressao lalg_do cmd

    error     shift, and go to state 65
    lalg_add  shift, and go to state 48
    lalg_sub  shift, and go to state 49

    error           [reduce using rule 71 (op_un)]
    var_identifier  reduce using rule 71 (op_un)
    var_real        reduce using rule 71 (op_un)
    var_integer     reduce using rule 71 (op_un)
    lalg_leftp      reduce using rule 71 (op_un)

    expressao  go to state 112
    op_un      go to state 52
    termo      go to state 53


State 75

   53 cmd: lalg_if condicao lalg_then . cmd pfalsa

    error           shift, and go to state 113
    var_identifier  shift, and go to state 19
    lalg_begin      shift, and go to state 20
    lalg_read       shift, and go to state 21
    lalg_write      shift, and go to state 22
    lalg_while      shift, and go to state 23
    lalg_for        shift, and go to state 24
    lalg_if         shift, and go to state 25

    cmd  go to state 114


State 76

   66 relacao: error .

    $default  reduce using rule 66 (relacao)


State 77

   60 relacao: lalg_equal .

    $default  reduce using rule 60 (relacao)


State 78

   61 relacao: lalg_n_equal .

    $default  reduce using rule 61 (relacao)


State 79

   62 relacao: lalg_g_than .

    $default  reduce using rule 62 (relacao)


State 80

   63 relacao: lalg_l_than .

    $default  reduce using rule 63 (relacao)


State 81

   64 relacao: lalg_ge_than .

    $default  reduce using rule 64 (relacao)


State 82

   65 relacao: lalg_le_than .

    $default  reduce using rule 65 (relacao)


State 83

   58 condicao: expressao relacao . expressao

    error     shift, and go to state 65
    lalg_add  shift, and go to state 48
    lalg_sub  shift, and go to state 49

    error           [reduce using rule 71 (op_un)]
    var_identifier  reduce using rule 71 (op_un)
    var_real        reduce using rule 71 (op_un)
    var_integer     reduce using rule 71 (op_un)
    lalg_leftp      reduce using rule 71 (op_un)

    expressao  go to state 115
    op_un      go to state 52
    termo      go to state 53


State 84

   90 fator: error .
   93 var_numero: error .
